--- a/src/main/resources/assets/better_copper/lang/en_us.json
+++ b/src/main/resources/assets/better_copper/lang/en_us.json
@@ -1,3 +1,7 @@
 {
-  "block.better_copper.copper_power_block": "Power Block of Copper"
+  "block.better_copper.copper_power_block": "Power Block of Copper",
+  "item.better_copper.copper_helmet": "Copper Helmet",
+  "item.better_copper.copper_chestplate": "Copper Chestplate",
+  "item.better_copper.copper_leggings": "Copper Leggings",
+  "item.better_copper.copper_boots": "Copper Boots"
 }
