Added new Charge entity attribute

--- a/src/main/resources/assets/better_copper/lang/en_us.json
+++ b/src/main/resources/assets/better_copper/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "attribute.name.generic.armor_charge": "Armor Charge",
   "block.better_copper.copper_power_block": "Power Block of Copper",
   "item.better_copper.copper_helmet": "Copper Helmet",
   "item.better_copper.copper_chestplate": "Copper Chestplate",
