--- a/src/main/resources/assets/better_copper/lang/en_us.json
+++ b/src/main/resources/assets/better_copper/lang/en_us.json
@@ -1,6 +1,6 @@
 {
   "block.better_copper.copper_power_block": "Power Block of Copper",
-  "block.better_copper.netherite_coated_gold_block": "Block of Netherite coated Gold",
+  "block.better_copper.netherite_coated_gold_block": "Block of Netherite Coated Gold",
   "item.better_copper.copper_helmet": "Copper Helmet",
   "item.better_copper.copper_chestplate": "Copper Chestplate",
   "item.better_copper.copper_leggings": "Copper Leggings",
