Renamed Power Block, and added Oxidization, along some texture changes

--- a/src/main/resources/assets/better_copper/lang/en_us.json
+++ b/src/main/resources/assets/better_copper/lang/en_us.json
@@ -1,13 +1,20 @@
 {
-  "block.better_copper.copper_power_block": "Power Block of Copper",
+  "block.better_copper.copper_core": "Copper Core",
   "block.better_copper.copper_rail": "Copper Rail",
+  "block.better_copper.exposed_copper_core": "Exposed Copper Core",
   "block.better_copper.exposed_copper_rail": "Exposed Copper Rail",
   "block.better_copper.netherite_coated_gold_block": "Block of Netherite Coated Gold",
+  "block.better_copper.oxidized_copper_core": "Oxidized Copper Core",
   "block.better_copper.oxidized_copper_rail": "Oxidized Copper Rail",
+  "block.better_copper.waxed_copper_core": "Waxed Copper Core",
   "block.better_copper.waxed_copper_rail": "Waxed Copper Rail",
+  "block.better_copper.waxed_exposed_copper_core": "Waxed Exposed Copper Core",
   "block.better_copper.waxed_exposed_copper_rail": "Waxed Exposed Copper Rail",
+  "block.better_copper.waxed_oxidized_copper_core": "Waxed Oxidized Copper Core",
   "block.better_copper.waxed_oxidized_copper_rail": "Waxed Oxidized Copper Rail",
+  "block.better_copper.waxed_weathered_copper_core": "Waxed Weathered Copper Core",
   "block.better_copper.waxed_weathered_copper_rail": "Waxed Weathered Copper Rail",
+  "block.better_copper.weathered_copper_core": "Weathered Copper Core",
   "block.better_copper.weathered_copper_rail": "Weathered Copper Rail",
   "item.better_copper.copper_boots": "Copper Boots",
   "item.better_copper.copper_chestplate": "Copper Chestplate",
