Started to add Copper Capabilities

--- a/src/main/resources/assets/better_copper/lang/en_us.json
+++ b/src/main/resources/assets/better_copper/lang/en_us.json
@@ -16,9 +16,13 @@
   "block.better_copper.waxed_weathered_copper_rail": "Waxed Weathered Copper Rail",
   "block.better_copper.weathered_copper_core": "Weathered Copper Core",
   "block.better_copper.weathered_copper_rail": "Weathered Copper Rail",
+  "copper_capabilities.empty": "No capabilities...",
+  "copper_capabilities.tip": "Get copper tools or armor to your inventory to start.",
+  "gui.copper_capabilities": "Copper Capabilities",
   "item.better_copper.copper_boots": "Copper Boots",
   "item.better_copper.copper_chestplate": "Copper Chestplate",
   "item.better_copper.copper_helmet": "Copper Helmet",
   "item.better_copper.copper_leggings": "Copper Leggings",
-  "item.better_copper.copper_sword": "Copper Sword"
+  "item.better_copper.copper_sword": "Copper Sword",
+  "key.copper_capabilities": "Copper Capabilities"
 }
